# national-letters

./: .gitignore  README.md  national-letters-spec.md  pyproject.toml  svgo.config.mjs
.github/workflows/: rebuild.yml  release.yml
data/: aliases.json  codes.json  flags-manifest.json  unresolved.json
scripts/: 01_extract_rrs.py  02_fetch_world_sailing.py  03_extract_sailwave.py  04_merge.py  05_fetch_flags.py  06_optimise_flags.py  07_validate.py
sources/: aliases.yaml  extended-names.yaml  flag-overrides.yaml  name-overrides.yaml  rrs-2025-2028-appendix-g.json  sailwave-flags-listing.html  sailwave-flags.json  world-sailing-members.html  world-sailing-members.json
tests/: test_rrs_extraction.py
